[package]
name = "rust-data-inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.23.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.23.0"
egui_dock = { version = "0.8.2", features = ["serde"] }
rand = "0.8.5"
