[package]
name = "rust-data-inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.25.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.25.0"
egui_dock = { version = "0.10.0", features = ["serde"] }
egui_plot = "0.25.0"
rand = "0.8.5"
rust-data-inspector-signals = {path = "rust-data-inspector-signals"}
serde = "1.0.195"
thiserror = "1.0.56"

[workspace]
members = ["rust-data-inspector-signals"]
