[package]
name = "rust_data_inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.25.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.25.0"
egui_dock = { version = "0.10.0", features = ["serde"] }
egui_plot = { version = "0.25.0", features = ["serde"] }
rand = "0.8.5"
rust_data_inspector_signals = {path = "rust_data_inspector_signals"}
serde = "1.0.195"
thiserror = "1.0.56"
downsample_rs = { git = "https://github.com/hixos/tsdownsample"}

[features]
# Enables AVX512 and NEON support (requires nightly rustc) (see https://github.com/jvdd/argminmax)
nightly_simd = ["downsample_rs/nightly_simd"]


[workspace]
members = ["rust_data_inspector_signals"]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]